changes slimequest and readmes
-"Slimequest": chances of fake antidote now are 1/2/2 for success/neutral ending/evil ending.
-compatibility notes and known issues added to readme

--- a/bgqe/bgqe.ini
+++ b/bgqe/bgqe.ini
@@ -24,7 +24,7 @@ Forum = https://www.gibberlings3.net/forums/forum/148-baldurs-gate-mini-quests-a
 
 # if you use Github.com (preferred hosting site), simply use github.com/AccountOrOrgName/RepositoryName    
 # If you use other hosting sites, please check requirements and put direct download link  
-Download = 
+Download = https://github.com/Gibberlings3/BG_Quests_And_Encounters
 
 # Requirements for other hosting sites:
 # - forum attachments won't work because the download links will be changed every time when you update mod package
