-added globally unique LABELs to support Project Infinity.

--- a/bgqe/bgqe.ini
+++ b/bgqe/bgqe.ini
@@ -26,6 +26,9 @@ Forum = https://www.gibberlings3.net/forums/forum/148-baldurs-gate-mini-quests-a
 # If you use other hosting sites, please check requirements and put direct download link  
 Download = https://github.com/Gibberlings3/BG_Quests_And_Encounters
 
+# Type of LABELs used by the mod, read more here https://www.gibberlings3.net/forums/topic/32516-tutorial-what-is-label
+LabelType = GloballyUnique
+
 # Dynamic Install Order Category
 Type = Quests
 
