--- a/bgqe/bgqe.ini
+++ b/bgqe/bgqe.ini
@@ -33,3 +33,5 @@ LabelType = GloballyUnique
 Type = Quests
 
 Before = ACBre, bg1npc, c#brage, c#brandock, c#grey, c#husam, EET_end
+
+After = eefixpack
