revised listing of install order:
only lists mods that should be installed before, or mods that need to be installed after but do not include own checks in their ini file.

--- a/bgqe/bgqe.ini
+++ b/bgqe/bgqe.ini
@@ -32,6 +32,6 @@ LabelType = GloballyUnique
 # Dynamic Install Order Category
 Type = Quests
 
-Before = ACBre, bg1npc, c#brage, c#brandock, c#grey, c#husam, EET_end
+Before = bg1npc, EET_end
 
 After = eefixpack
